# linolog

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY.md  config.py  env.example  main.py  metadata_loader.py  processor.py  pyproject.toml  requirements.txt  sample_metadata.yaml  setup.py  setup_instructions.md  sheet_writer.py  test_interactive.py  test_llm_agents.py  test_setup.py  test_tools_normalizer.py  tools_normalizer.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: base_agent.py  color_agent.py  llm_color_agent.py  llm_tag_agent.py  metadata_filler.py  tag_agent.py
src/linolog/: __init__.py  __main__.py  config.py  folder_watcher.py  llm_client.py  main.py  metadata_loader.py  processor.py  sheet_writer.py  tools_normalizer.py
src/linolog/agents/: __init__.py  base_agent.py  color_agent.py  llm_color_agent.py  llm_tag_agent.py  metadata_filler.py  tag_agent.py
tests/: __init__.py  test_color_agent.py  test_config_unit.py  test_interactive.py  test_llm_agents.py  test_llm_color_agent_unit.py  test_metadata_filler.py  test_metadata_loader_unit.py  test_processor_unit.py  test_setup.py  test_tag_agent.py  test_tools_normalizer.py  test_tools_normalizer_unit.py
